# go-owasm

./: .gitignore  Cargo.toml  Dockerfile.linux  Dockerfile.osx  Makefile  README.md  cbindgen.toml  go.mod  main.go
.github/workflows/: build.yaml  build_shared_libraries.yaml  ci.yaml  release.yaml
api/: bindings.h  cgo.go  common_test.go  env.go  error.go  lib.go  lib_test.go  libgo_owasm.dylib  link_glibclinux_aarch64.go  link_glibclinux_x86_64.go  link_muslc.go  link_normal.go
libgo_owasm/: Cargo.toml  build.rs  cbindgen.toml  rust-toolchain
libgo_owasm/src/: env.rs  lib.rs  span.rs  vm.rs
src/: env.rs  lib.rs  span.rs  vm.rs
wasm/: fun2.wasm  fun2.wat  fun3.wasm  fun3.wat  test.wat
