[package]
name = "go-owasm"
version = "0.2.0"
authors = ["Sorawit Suriyakarn <swit@bandprotocol.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
owasm = { path = "../owasm"}
failure = "0.1.6"

[profile.release]
opt-level = 3
debug = false
rpath = true
lto = false
debug-assertions = false
codegen-units = 16
panic = "unwind"
incremental = true
overflow-checks = true
