[package]
name = "go-owasm"
version = "0.2.1"
authors = ["Sorawit Suriyakarn <swit@bandprotocol.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
owasm-vm = "0.2.1"
failure = "0.1.6"

[build-dependencies]
cbindgen = "0.18.0"

[profile.release]
opt-level = 3
debug = false
rpath = true
lto = false
debug-assertions = false
codegen-units = 16
panic = "unwind"
incremental = true
overflow-checks = true
